common utility module and components added"

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,33 @@
+/****CAROUSEL***********************/
+/* carousel */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*!
  * Start Bootstrap - Simple Sidebar (https://startbootstrap.com/template/simple-sidebar)
  * Copyright 2013-2020 Start Bootstrap
