--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,55 +1,12 @@
 <div class="container-fluid">
   <div class="row">
-      
-
     <div class="d-flex" id="wrapper" [ngClass]="status ? 'toggled' : ''">
-
       <!-- Sidebar -->
-      <div class="border-right" id="sidebar-wrapper">
-        <div class="sidebar-heading"><i class="fa fa-music" aria-hidden="true"></i> kTunes</div>
-        <div class="list-group list-group-flush">
-          <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
-          <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-globe" aria-hidden="true"></i> Browse</a>
-          <a href="#" class="list-group-item list-group-item-action"><i class="fa fa fa-heart-o" aria-hidden="true"></i> Liked Songs</a>
-          <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-book" aria-hidden="true"></i> Albums</a>
-          <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-plus-circle" aria-hidden="true"></i> New Playlist</a>
-          <a href="#" class="list-group-item list-group-item-action">Status</a>
-        </div>
-      </div>
+      <sidebar [status]="status"></sidebar>
       <!-- /#sidebar-wrapper -->
-  
       <!-- Page Content -->
       <div id="page-content-wrapper">
-  
-        <nav class="navbar navbar-expand-lg border-bottom">  
-          <button class="btn btn-primary" id="menu-toggle" (click)="toggleMenu($event)">Toggle Menu</button>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-  
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </nav>
-  
+       <navbar (toggleMenuEvent)="toggleMenuEvent($event)"></navbar>
         <div class="container-fluid ">
           <h1 class="mt-4">Simple Sidebar</h1>
           <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
@@ -57,11 +14,7 @@
         </div>
       </div>
       <!-- /#page-content-wrapper -->
-  
     </div>
-
-
-
   </div>
   </div>
 
